# product_release_control

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
dao/: __init__.py  dao_shift_tasks.py
dto/: __init__.py  shift_task_dto.py
exception/: __init__.py  custom_exception.py
model/: __init__.py  config.py  database.py  insert_data_db.py  models.py  static_data_for_db.py
service/: __init__.py  shift_task_dto_service.py
view/: __init__.py  shift_tasks_view.py
