[tool.poetry]
name = "product-release-control"
version = "0.1.0"
description = ""
authors = ["Victor Smirnov <csatom@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
black = {extras = ["d"], version = "^24.2.0"}
pydantic-settings = "^2.2.1"
asyncio = "^3.4.3"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
